--- a/src/styles.css
+++ b/src/styles.css
@@ -26,9 +26,15 @@ h1 {
   display: block;
 }
 
+.avatar-container {
+  text-align: center; /* Center the content horizontally */
+  margin-top: 10px;
+}
+
 .avatar {
-  width: 100%;
-  display: block;
+  width: 50%;
+  border-radius: 50%;
+  height: 50%;
 }
 
 .data {
